2011-03-31  Vsevolod Vlasov  <vsevik@chromium.org>

Reviewed by Pavel Feldman.

        XML viewer is not shown when frame has non-null opener
        https://bugs.webkit.org/show_bug.cgi?id=56384

        Enabled test for extensions hooks in xml viewer.

        * http/tests/xmlviewer/extensions-api-expected.txt: Added.
        * http/tests/xmlviewer/extensions-api.html: Added.
        * http/tests/xmlviewer/resources/sample.xml: Added.
        * platform/qt/Skipped:
        * xmlviewer/extensions-api-expected.txt: Removed.
        * xmlviewer/extensions-api.html_disabled: Removed.
2011-03-31  Vsevolod Vlasov  <vsevik@chromium.org>

        Reviewed by Pavel Feldman.

        XML viewer is not shown when frame has non-null opener
        https://bugs.webkit.org/show_bug.cgi?id=56384

        Removed opener check in XML viewer

        Test: http/tests/xmlviewer/extensions-api.html

        * xml/XMLTreeViewer.cpp:
        (WebCore::XMLTreeViewer::hasNoStyleInformation):
        * xml/XMLViewer.js:

Canonical link: https://commits.webkit.org/72400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82604 268f45cc-cd09-0410-ab3c-d52691b4dbfc